[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/WordGenerator.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/WordSelector.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Dictionnaire.tscn" type="PackedScene" id=4]

[node name="Main" type="Control"]
anchor_right = 1.008
anchor_bottom = 1.0
margin_right = -0.192017
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generateur" type="Control" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="WordGenerator" parent="TabContainer/Generateur" instance=ExtResource( 1 )]
margin_left = -4.0
margin_top = -32.0
margin_right = -4.0
margin_bottom = -32.0

[node name="WordSelector" parent="TabContainer/Generateur" instance=ExtResource( 3 )]
anchor_right = 0.7
margin_left = 404.0
margin_top = -8.0
margin_right = 400.0
margin_bottom = 88.0

[node name="Dictionnaire" parent="TabContainer" instance=ExtResource( 4 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
